welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: type mismatch;
 found   : Unit
 required: Int
			return j = j + 1
                                 ^array667:10: error: type mismatch;
 found   : Unit
 required: Int
			return j = j + 1
                                 ^array667:3: error: type mismatch;
 found   : Unit
 required: Int
	for (k<-0 to nums.length){
              ^